# Typhon

./: README.md  pyproject.toml  requirements.txt  run_typhon.ps1
examples/: invalid_missing_types.ty  lib_usage_example.ty  local_helper.py  main_script.ty  runtime_type_error.ty  teste_to_log.ty  user_service.ty  void_return.ty
tests/: test_literal_types.py
typhon/: __init__.py  __main__.py  cli.py  errors.py  runner.py  runtime.py  transpiler.py  validator.py
