[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typhon"
version = "0.1.0"
description = "Python-like language with mandatory types and runtime enforcement."
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
transpyle = [
    "transpyle==0.8.0",
]

[project.scripts]
typhon = "typhon.cli:main"

[tool.setuptools.packages.find]
include = ["typhon*"]
